--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,5 +1,4 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.ys.h2hdrx.adminmodule.Registration.tryPassScreenshot</td></tr>
-<tr><td>com.ys.h2hdrx.adminmodule.Registration.Registration_edit</td></tr>
-<tr><td>com.ys.h2hdrx.adminmodule.Registration.tryFailScreenshot</td></tr>
+<tr><td>com.ys.h2hdrx.adminmodule.AdminLogin.changePassword</td></tr>
+<tr><td>com.ys.h2hdrx.adminmodule.AdminLogin.editUser</td></tr>
 </table>
